# TableMint

./: .gitignore  package-lock.json  package.json  requirements.txt  settings.py  urls.py  views.py
backend/: .env.example  manage.py  pyproject.toml  requirements.txt  test_order_creation.py  test_square_order_search.py
backend/backend(2)/: app.py
backend/orders/: models.py  square_client.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_order_square_location_id.py  0003_alter_orderitem_unit_price_sharesession.py
backend/payments/: __init__.py  models.py  square_service.py  stripe_views.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py  0002_ordersearch.py  0003_phillycheesesteakpayment.py  0004_phillycheesesteakpayment_base_amount_and_more.py  0005_phillycheesesteakpayment_total_currency_and_more.py  0006_payment_order_id.py
backend/payments/views/: pdf_receipt.py  receipt_views.py  square_views.py  stripe_views.py
backend/pos/: __init__.py  api_views.py  clover_adapter.py  clover_api_views.py  ncr_adapter.py  pos_adapter.py  pos_factory.py  pos_service.py  serializers.py  square_adapter.py  square_webhook_adapter.py  urls.py  views.py
backend/pos/migrations/: 0001_initial.py
backend/qlub_backend/: asgi.py  encryption.py  settings.py  urls.py  wsgi.py
backend/restaurants/: models.py  urls.py  views.py
backend/restaurants/migrations/: 0001_initial.py  (+2 more)
backend/static/: test-images.html
backend/tables/: frontend_urls.py  models.py  urls.py  views.py
backend/webhooks/: urls.py  views.py
client/: README.md  (+3 more)
(+81 files in other folders)
